ODK-188, ODK-223 Update url rewrite